Added basic click event system

--- a/Card Match Game.vcxproj
+++ b/Card Match Game.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="CardComponent.cpp" />
     <ClCompile Include="Color.cpp" />
+    <ClCompile Include="IClickable.cpp" />
     <ClCompile Include="Icon.cpp" />
     <ClCompile Include="IDrawable.cpp" />
     <ClCompile Include="Source.cpp" />
