--- a/Card Match Game.vcxproj.filters
+++ b/Card Match Game.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="IDrawable.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="IClickable.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IDrawable.h">
